sample/asm/invalid_operand_types/ilt.asm
.function: main
    strstore 1 "Hello"
    strstore 2 "World!"
    ilt 3 2 1

    izero 0
    return
.end
